FIX added column overflow in places and sports table

--- a/src/screens/Scheduling/ListAllSchedulings/ViewScheduling.css
+++ b/src/screens/Scheduling/ListAllSchedulings/ViewScheduling.css
@@ -1,9 +1,9 @@
 .filter-container {
-    width: 100vw;
-    height: 180vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100vw;
+  height: 180vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .filterOptions {
@@ -15,17 +15,14 @@
   border-radius: 0.3rem;
 }
 
-
 .cardScheduling {
   display: flex;
   position: relative;
   background-color: rgba(125, 192, 119, 0.12);
   align-items: center;
-
 }
 
 .card-body {
-
   border-radius: 10px;
   box-shadow: 1px 2px 10px 1px rgba(0, 0, 0, 0.2);
   height: 320px;
@@ -41,7 +38,7 @@
   position: relative;
   width: 250px;
   font-size: 15px;
-  top: .6vh;
+  top: 0.6vh;
   height: 45px;
   text-align: center;
   border-radius: 0.3rem;
@@ -60,7 +57,6 @@
 
 .buttonFilter {
   display: inline-block;
-
 }
 .bntSheduling {
   margin-left: 5px;
@@ -85,7 +81,8 @@
   bottom: 136px;
 }
 
-.table-sched, .table-schedfilter {
+.table-sched,
+.table-schedfilter {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -99,16 +96,12 @@
   border-radius: 10px;
   max-height: 700px;
   font-size: 0.94rem;
-
 }
 
 .table-schedfilter {
   width: 100%;
   height: 320px;
   top: 20px;
-
-
-
 }
 
 .field-viewsched {
@@ -127,12 +120,13 @@
   background-color: rgba(125, 192, 119, 0.12);
 }
 
-.btn-confirm, .btn-del, .btn-confirmSc, .btn-cancelSc {
+.btn-confirm,
+.btn-del,
+.btn-confirmSc,
+.btn-cancelSc {
   display: flex;
   margin: -3px;
 }
-
-
 
 .footer-viewpendingsc {
   position: fixed;
@@ -140,7 +134,6 @@
   height: 25px;
   bottom: 0px;
   background-color: rgb(41, 216, 25);
-
 }
 
 .field-pendingsc {
@@ -170,11 +163,9 @@
     bottom: 10px;
   }
 
-
   .table-schedpend {
     font-size: 10px;
     padding: 10px;
-
   }
 }
 
@@ -200,5 +191,4 @@
     margin-top: 10px;
     margin-left: 10px;
   }
-
 }
